fix: fixed text align

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -29,7 +29,7 @@ footer {
     }
 
     .copyright {
-        text-align: justify;
+        text-align: center;
     }
 
     .place {
